# admin-service

./: Dockerfile  README.md  docker_postgres_init copy.sql  movies_database.ddl  pyproject.toml  requirements.txt
.github/workflows/: deploy-admin.yml
app/: load_data.py  movies_database.ddl  run.sh  uwsgi.ini
app/config/: .env.example  settings.py
app/config/components/: database.py  security.py
app/movies/: admin.py  auth.py  models.py
app/movies/locale/en/LC_MESSAGES/: django.po
app/movies/locale/ru/LC_MESSAGES/: django.po
app/movies/management/commands/: clean_db.py  seed_data.py  wait_for_db.py
app/movies/migrations/: 0001_initial.py  0002_user.py  0003_user_username.py
nginx/: Dockerfile  default.conf.tpl
scripts/: run.sh
